cmake_minimum_required(VERSION 3.14)
project(3problems_1)

set(CMAKE_CXX_STANDARD 14)

add_executable(3problems_1 deyksr_algorythm.cpp)
add_executable(polish_notation polish_notation.cpp)
add_executable(123 123.cpp)
add_executable(deyksr_algorythm deyksr_algorythm.cpp)
add_executable(A_Saveliy polish_doesnt_work.cpp)
add_executable(A A.cpp)
add_executable(b /Users/isajgordeev/Downloads/b.cpp)