cmake_minimum_required(VERSION 3.14)
project(untitled1)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled1 main.cpp)
add_executable(second_problem second_problem.cpp)
add_executable(complex_nums complex_nums.cpp)
add_executable(vector vector.cpp)
add_executable(vector-1 vector-1.cpp)
add_executable(vector-s vector-s.cpp)
add_executable(vector-s-main vector-s-main.cpp)
add_executable(vector-main vector-main.cpp)
add_executable(hometask_vector hometask_vector.cpp)
add_executable(Complex /Users/isajgordeev/Downloads/Complex.cpp)
add_executable(phsent /Users/isajgordeev/Downloads/phsent.cpp)
add_executable(phsentmain /Users/isajgordeev/Downloads/phsentmain.cpp)
add_executable(vector_container vector_container.cpp)
add_executable(new_Vector new_Vector.cpp)
add_executable(D D.cpp)