cmake_minimum_required(VERSION 3.15)
project(algorithms)

set(CMAKE_CXX_STANDARD 17)

add_executable(algorithms main.cpp)
add_executable(foursum foursum.cpp)
add_executable(RBT RBT.cpp)
add_executable(RBT-2 /Users/isajgordeev/Downloads/RBT-2.cpp)
add_executable(RBT-3 /Users/isajgordeev/Downloads/RBT-3.cpp)
add_executable(ad ad.cpp)
add_executable(123 123.cpp)
add_executable(goblins  "goblins .cpp")