cmake_minimum_required(VERSION 3.14)
project(contest4_)

set(CMAKE_CXX_STANDARD 17)

add_executable(contest4_ main.cpp)
add_executable(B1 B1.cpp)
add_executable(B2 B2.cpp)
add_executable(123 123.cpp)
add_executable(1234 1234.cpp)
add_executable(D D.cpp)
add_executable(main-4 /Users/isajgordeev/Downloads/main-4.cpp)
add_executable(F F.cpp)
add_executable(main-5 /Users/isajgordeev/Downloads/main-5.cpp)
add_executable(stack1 stack1.cpp)
add_executable(Cpp Cpp.cpp)
add_executable(C stack.cpp)
add_executable(E E.cpp)
add_executable(stack_ stack_.cpp)
add_executable(B B.cpp)
add_executable(last_chance_for_B last_chance_for_B.cpp)
add_executable(B_for_ph B_for_ph.cpp)
add_executable(1 1.cpp)
add_executable(main_4 main_4.cpp)