cmake_minimum_required(VERSION 3.14)
project(cumtest)

set(CMAKE_CXX_STANDARD 17)

add_executable(cumtest A.cpp)
add_executable(stringgen stringgen.cpp)
add_executable(A_Saveliy A_Saveliy.cpp)
add_executable(AA AA.cpp)
add_executable(B B.cpp)
add_executable(C C.cpp)
add_executable(C1 C1.cpp)
add_executable(D D.cpp)
add_executable(AAA AAA.cpp)