cmake_minimum_required(VERSION 3.15)
project(task)

set(CMAKE_CXX_STANDARD 17)

add_executable(task main.cpp)
add_executable(A E.cpp)
add_executable(E E.cpp)
add_executable(E1 E1.cpp)
add_executable(D D.cpp)
add_executable(awd awd.cpp)
add_executable(123 123.cpp)
add_executable(1234 1234.cpp)
add_executable(rbk rbk.cpp)
add_executable(awdwa awdwa.cpp)
add_executable(qwe qwe.cpp)